<resources>
    <string name="app_name">FitMate</string>
    <string name="fitmate">FITMATE</string>
    <string name="registrarse">Registrarse</string>
    <string name="correo">Correo Electronico</string>
    <string name="edad">Edad</string>
    <string name="contrasenya">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="hecho">HECHO</string>
    <string name="iniciarsesion">Iniciar Sesión</string>
    <string name="guest">Ingresar como invitado</string>
    <string name="email">2023_francisco.jordan@iticbcn.cat</string>
    <string name="username">Franjoga</string>
    <string name="emailInvitado">Has iniciado sesión como invitado</string>
    <string name="usernameInvitado">Invitado</string>
    <string name="pasosInt">0</string>
    <string name="pasosString">Pasos\ntotales</string>
    <string name="settings">Ajustes</string>
    <string name="distanciaInt">0</string>
    <string name="distanciaString">Distancia\nrecorrida</string>
    <string name="tiempoInt">0</string>
    <string name="tiempoString">Tiempo\ntotal</string>
    <string name="ejercicios">Ejercicios</string>
    <string name="verMas">Ver más</string>
    <string name="recetas">Recetas</string>
    <string name="altura">Altura</string>
    <string name="peso">Peso</string>
    <string name="genero">Género</string>
    <string name="actividad">Nivel de actividad</string>
    <string name="historialescaneos">Historial de escaneos</string>



</resources>