<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/regularGreen"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register"
            style="@style/more"
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/bot_half_circle"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginStart="140dp"
            android:layout_marginEnd="140dp"
            android:layout_marginBottom="145dp"
            android:background="@drawable/small_button"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:text="@string/registrarse" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login"
            style="@style/more"
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/top_half_circle"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginStart="140dp"
            android:layout_marginTop="153dp"
            android:layout_marginEnd="140dp"
            android:background="@drawable/small_button"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:text="@string/iniciarsesion" />

        <ImageView
            android:id="@+id/top_half_circle"
            android:layout_width="match_parent"
            android:layout_height="239dp"
            android:layout_alignParentTop="true"
            app:srcCompat="@drawable/top_halfcircle"
            app:tint="@color/darkGreen" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="210dp"
            android:layout_height="197dp"
            android:layout_alignBottom="@+id/top_half_circle"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="-20dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="62dp"
            app:srcCompat="@mipmap/fitmate_logo_foreground" />

        <ImageView
            android:id="@+id/bot_half_circle"
            android:layout_width="match_parent"
            android:layout_height="109dp"
            android:layout_alignParentBottom="true"
            app:srcCompat="@drawable/half_circle_bot" />

        <TextView
            android:id="@+id/fitmate_title"
            style="@style/greenLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/bot_half_circle"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="15dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/fitmate" />


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>