<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/regularGreen">

    <LinearLayout
        android:id="@+id/box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_half_circle"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/box"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="20dp"
            android:background="@color/white"
            android:hint="Nombre de usuario">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="60dp"
            android:background="@color/white"
            android:hint="Contraseña">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/invitado"
            style="@style/clickable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-35dp"
            android:layout_marginBottom="50dp"
            android:clickable="true"
            android:text="@string/guest" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="-80dp"
            android:src="@tools:sample/avatars"
            app:srcCompat="@mipmap/next_foreground" />

    </LinearLayout>

    <ImageView
        android:id="@+id/top_half_circle"
        android:layout_width="match_parent"
        android:layout_height="239dp"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/half_circle_top" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="210dp"
        android:layout_height="197dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="-20dp"
        android:layout_marginEnd="100dp"
        app:srcCompat="@mipmap/fitmate_logo_foreground" />

    <ImageView
        android:id="@+id/bot_half_circle"
        android:layout_width="match_parent"
        android:layout_height="109dp"
        android:layout_alignParentBottom="true"
        app:srcCompat="@drawable/half_circle_bot" />

    <TextView
        android:id="@+id/fitmate_title"
        style="@style/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="15dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="FITMATE" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/done"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/box"
        android:layout_gravity="center"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="-60dp"
        android:layout_marginRight="100dp"
        android:height="75dp"
        android:background="@drawable/done_button"
        android:padding="10dp"
        android:text="@string/hecho"
        android:textColor="@color/white" />

    <ImageView
        android:id="@+id/top_box2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/box"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="-50dp"
        app:srcCompat="@drawable/top_clipboard" />

    <TextView
        android:id="@+id/textView"
        style="@style/main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/top_box2"
        android:layout_alignParentEnd="false"
        android:layout_marginLeft="143dp"
        android:layout_marginBottom="-115dp"
        android:text="@string/iniciarsesion" />


</RelativeLayout>
